[gd_scene load_steps=2 format=3 uid="uid://xirhpbk1g2jw"]

[ext_resource type="Script" uid="uid://bstc4rx13h0r4" path="res://script/config.gd" id="1_cmeus"]

[node name="config" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmeus")

[node name="menu" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="video" type="TabBar" parent="menu"]
layout_mode = 2
metadata/_tab_index = 0

[node name="butuons" type="HBoxContainer" parent="menu/video"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 161.0
grow_vertical = 0

[node name="Vbutuons" type="VBoxContainer" parent="menu/video/butuons"]
layout_mode = 2
size_flags_horizontal = 10

[node name="reste_config" type="Button" parent="menu/video/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "reset para o padrão"

[node name="voltar" type="Button" parent="menu/video/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "voltar
"

[node name="aplicar" type="Button" parent="menu/video/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "aplicar"

[node name="resolucao" type="OptionButton" parent="menu/video"]
layout_mode = 2
offset_left = 118.0
offset_top = 30.0
offset_right = 232.0
offset_bottom = 61.0
selected = 0
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1024 x 768"
popup/item_1/id = 1
popup/item_2/text = "1280 x 960"
popup/item_2/id = 2

[node name="txt_resolucao" type="Label" parent="menu/video"]
layout_mode = 2
offset_left = 20.0
offset_top = 33.0
offset_right = 100.0
offset_bottom = 56.0
text = "resolução:"

[node name="tela_cheia" type="CheckButton" parent="menu/video"]
layout_mode = 2
offset_left = 12.0
offset_top = 90.0
offset_right = 135.0
offset_bottom = 121.0
text = "tela cheia"

[node name="audio" type="TabBar" parent="menu"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="butuons" type="HBoxContainer" parent="menu/audio"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 161.0
grow_vertical = 0

[node name="Vbutuons" type="VBoxContainer" parent="menu/audio/butuons"]
layout_mode = 2
size_flags_horizontal = 10

[node name="reste_config" type="Button" parent="menu/audio/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "reset para o padrão"

[node name="voltar" type="Button" parent="menu/audio/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "voltar
"

[node name="aplicar" type="Button" parent="menu/audio/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "aplicar"

[node name="tlecado e mouse" type="TabBar" parent="menu"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="butuons" type="HBoxContainer" parent="menu/tlecado e mouse"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 161.0
grow_vertical = 0

[node name="Vbutuons" type="VBoxContainer" parent="menu/tlecado e mouse/butuons"]
layout_mode = 2
size_flags_horizontal = 10

[node name="reste_config" type="Button" parent="menu/tlecado e mouse/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "reset para o padrão"

[node name="voltar" type="Button" parent="menu/tlecado e mouse/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "voltar
"

[node name="aplicar" type="Button" parent="menu/tlecado e mouse/butuons/Vbutuons"]
layout_mode = 2
size_flags_horizontal = 0
text = "aplicar"

[connection signal="pressed" from="menu/video/butuons/Vbutuons/aplicar" to="." method="_on_aplicar_pressed"]
[connection signal="item_selected" from="menu/video/resolucao" to="." method="_on_resolucao_item_selected"]
[connection signal="toggled" from="menu/video/tela_cheia" to="." method="_on_tela_cheia_toggled"]
[connection signal="pressed" from="menu/audio/butuons/Vbutuons/aplicar" to="." method="_on_aplicar_pressed"]
[connection signal="pressed" from="menu/tlecado e mouse/butuons/Vbutuons/aplicar" to="." method="_on_aplicar_pressed"]
